NetBSD Problem Report #41534

From kilbi@kilbi.de  Wed Jun  3 21:31:37 2009
Return-Path: <kilbi@kilbi.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 714EA63B11D
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  3 Jun 2009 21:31:37 +0000 (UTC)
Message-Id: <20090603213119.E7798B212@mail.kilbi.de>
Date: Wed,  3 Jun 2009 23:31:19 +0200 (MEST)
From: mk@kilbi.de
Reply-To: mk@kilbi.de
To: gnats-bugs@gnats.NetBSD.org
Subject: mounting fd(4) causes panic in -current
X-Send-Pr-Version: 3.95

>Number:         41534
>Category:       kern
>Synopsis:       mounting fd(4) causes panic in -current
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jun 03 21:35:00 +0000 2009
>Closed-Date:    Fri Jul 31 18:52:51 +0000 2009
>Last-Modified:  Fri Jul 31 18:52:51 +0000 2009
>Originator:     Markus W Kilbinger
>Release:        NetBSD 5.99.13
>Organization:
>Environment:


System: NetBSD qie 5.99.13 NetBSD 5.99.13 (Q) #2: Tue Jun  2 20:30:33 MEST 2009  root@q:/usr/u/NetBSD/HEAD/src/sys/arch/amd64/compile/Q amd64
Architecture: x86_64
Machine: amd64
>Description:

	-current kernels panic while mounting fd(4) according to
	/etc/fstab's entry:

	  fdesc /dev fdesc ro,-o=union 0 0

	mount /dev yields:

	  http://nice.afraid.org/fdesc-panic/fdesc-panic.png
>How-To-Repeat:
	Try to mount fd(4) on -current machine (amd64 in my case).
>Fix:
	Unknown.

>Release-Note:

>Audit-Trail:
From: Antti Kantee <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41534 CVS commit: src/sys/miscfs/fdesc
Date: Fri, 31 Jul 2009 18:44:59 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Fri Jul 31 18:44:59 UTC 2009

 Modified Files:
 	src/sys/miscfs/fdesc: fdesc_vfsops.c

 Log Message:
 Instead of reporting some random "files used/free" figures for the
 process doing statvfs(!), just report 0.  The code had some kernel
 panicking bug after the descriptor code update, the functionality
 is more like a bunny rabbit hat than anything useful, and I can't
 bother to figure out what the invariants in the new descriptor code
 are.

 fixes PR kern/41534 and kern/41786


 To generate a diff of this commit:
 cvs rdiff -u -r1.80 -r1.81 src/sys/miscfs/fdesc/fdesc_vfsops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: pooka@NetBSD.org
State-Changed-When: Fri, 31 Jul 2009 21:52:51 +0300
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.