Instead of reporting some random "files used/free" figures for the process doing statvfs(!), just report 0.  The code had some kernel panicking bug after the descriptor code update, the functionality is more like a bunny rabbit hat than anything useful, and I can't bother to figure out what the invariants in the new descriptor code are.

fixes PR kern/41534 and kern/41786